<resources>
    <string name="app_name">EWay Bill Generator</string>
    <string name="generate_e_way_bill1">Generate E-Way Bill</string>
    <string name="scroll_below_for_more_options1">Scroll Below For More Options</string>
    <string name="generate_bulk1">Generate Bulk</string>
    <string name="update_vehicle_number1">Update Vehicle Number</string>
    <string name="print_e_way_bill1">Print E-Way Bill</string>
    <string name="cancel_e_way_bill1">Cancel E-Way Bill</string>
    <string name="forget_password1">Forget Password</string>
    <string name="update_vehicle_details_bulk_upload">Update vehicle Details - Bulk Upload</string>
    <string name="multiple_vehicle_update1">Multiple Vehicle Update</string>
    <string name="extension_form_for_e_way_bill1">Extension Form For E-Way Bill</string>
    <string name="update_transporter_details_in_ewb1">Update Transporter Details In EWB</string>
    <string name="update_bulk_transporter_details_in_ewb1">Update Bulk Transporter Details In EWB</string>
    <string name="generate_e_way_bill">Generate E-Way Bill</string>
    <string name="scroll_below_for_more_options">Scroll Below For More Options</string>
    <string name="generate_bulk">Generate Bulk</string>
    <string name="update_vehicle_number">Update Vehicle Number</string>
    <string name="print_e_way_bill">Print E-Way Bill</string>
    <string name="cancel_e_way_bill">Cancel E-Way Bill</string>
    <string name="forget_password">Forget Password</string>
    <string name="multiple_vehicle_update">Multiple Vehicle Update</string>
    <string name="extension_form_for_e_way_bill">Extension Form For E-Way Bill</string>
    <string name="update_transporter_details_in_ewb">Update Transporter Details In EWB</string>
    <string name="update_bulk_transporter_details_in_ewb">Update Bulk Transporter Details In EWB</string>
    <string name="click_here_to_register">Click Here To Register</string>
    <string name="please_register_in_the_n_e_way_bill_portal_to_generate_e_way_bills">Please Register In The  E-Way Bill Portal To Generate E Way Bills</string>
    <string name="click_here_to_login"> Click Here To Login </string>
    <string name="click_to_continue"> Click To Continue </string>
    <string name="click_here_if_you_have_registered"> Click Here If You Have Registered </string>
    <string name="click_here_for_any_support_n_we_will_respond_you_back_in_12_hours">Click Here For Any Support\nWe Will Respond You Back In 12 Hours</string>
    <string name="click_here_for_any_support_n_we_will_respond_you_back_in_12_hours_1">Click Here For Any Support\nWe Will Respond You Back In 12 Hours</string>
    <string name="no2">No</string>
    <string name="yes2">Yes</string>
    <string name="are_you_registered_in_n_e_way_bill_portal_to_generate_e_way_bills2">Are You Registered In  E-Way Bill Portal To Generate E Way Bills?</string>
    <string name="sendSupportActivity">Send</string>
    <string name="type_your_message_hereSupportActivity">Type Your Message Here</string>
    <string name="messageSupportActivity">Message -</string>
    <string name="enter_your_name_hereSupportActivity">Enter Your Name Here</string>
    <string name="nameSupportActivity">Name -</string>
</resources>
