<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.student.ewaybillgenerator.Activity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/eway_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_blue_bg"
            android:onClick="generateNewEWBWebview"
            android:text="@string/generate_e_way_bill"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="18dp"
            android:textColor="@android:color/darker_gray">

        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/scroll_below_for_more_options"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/bulk_text"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="generateBulkWebview"
            android:text="@string/generate_bulk"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/updateVehicle_text"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="updateVehicleWebview"
            android:text="@string/update_vehicle_number"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/printEway_text"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="printEWBWebview"
            android:text="@string/print_e_way_bill"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6993478790775113/4034449674">
        </com.google.android.gms.ads.AdView>

        <Button
            android:id="@+id/cancel_text"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="cancelEWBWebview"
            android:text="@string/cancel_e_way_bill"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/forgetPass_text"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="forgetPassWebview"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/UpdateVehicleDetailsBulkUpload"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="updateVehicleDetailsWebview"
            android:text=" Update vehicle Details - Bulk Upload"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6993478790775113/4034449674">
        </com.google.android.gms.ads.AdView>

        <Button
            android:id="@+id/multipleVehicleUpdate"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="multipleVehicleWebview"
            android:text="@string/multiple_vehicle_update"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6993478790775113/4034449674">
        </com.google.android.gms.ads.AdView>

        <Button
            android:id="@+id/extensionFormForEWB"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="extensionFormWebview"
            android:text="@string/extension_form_for_e_way_bill"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/updateTransporterDetailsOfEWB"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="updateTransportorWebview"
            android:text="@string/update_transporter_details_in_ewb"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bulkTransporterUpload"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/roundedbtn"
            android:onClick="bulkTransporterWebview"
            android:text="@string/update_bulk_transporter_details_in_ewb"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6993478790775113/4034449674">
        </com.google.android.gms.ads.AdView>

        <Button
            android:id="@+id/support_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_btn_orange"
            android:text="@string/click_here_for_any_support_n_we_will_respond_you_back_in_12_hours"
            android:textAllCaps="false"
            android:onClick="supportActivity"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>

</ScrollView>

