<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.ewaybillgenerator.Activity2">

    <TextView
        android:id="@+id/registration_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/are_you_registered_in_n_e_way_bill_portal_to_generate_e_way_bills2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/yesBtn"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:layout_marginStart="41dp"
        android:background="@drawable/rounded_blue_bg"
        android:onClick="yesButtonClick"
        android:text="@string/yes2"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rounded_blue_bg"
        android:onClick="noButtonClick"
        android:text="@string/no2"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6993478790775113/4034449674"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6993478790775113/4034449674"
        app:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>
</android.support.constraint.ConstraintLayout>
